# url-uploader

./: .env.example  .gitignore  Cargo.toml  README.md
src/: bot.rs  command.rs  main.rs
