[package]
name = "url-uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.14", default-features = false, features = [
    "rustls-tls",
    "stream",
    "async-compression",
    "brotli",
    "gzip",
    "deflate",
] }
anyhow = "1.0.69"
chrono = "0.4.23"
grammers-client = { version = "0.4.0", features = ["html"] }
grammers-session = "0.4.0"
log = "0.4.17"
simplelog = "0.12.1"
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["compat", "io"] }
futures = "0.3.26"
async-read-progress = "0.2.0"
dotenv = "0.15.0"
bytesize = "1.2.0"
dashmap = "5.4.0"
scopeguard = "1.1.0"
stream-cancel = "0.8.1"
mime_guess = "2.0.4"
