[package]
name = "url-uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", default-features = false, features = [
    "rustls-tls",
    "stream",
    "brotli",
    "gzip",
    "deflate",
] }
anyhow = "1.0.89"
chrono = "0.4.38"
grammers-client = { version = "0.7.0", features = ["html"] }
grammers-session = "0.7.0"
grammers-mtsender = "0.7.0"
log = "0.4.22"
simplelog = "0.12.2"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["compat", "io"] }
futures = "0.3.31"
async-read-progress = "0.2.0"
dotenv = "0.15.0"
bytesize = "1.3.0"
dashmap = "6.1.0"
scopeguard = "1.2.0"
stream-cancel = "0.8.2"
mime_guess = "2.0.5"
percent-encoding = "2.3.1"
mp4 = "0.14.0"
